--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,83 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.container{
+  max-width: 70%;
+  margin: auto;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*Header.js*/
+.header{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-top: 30px;
+  height: 40px;
+  background-color:rgb(31, 31, 31);
+  color: rgb(177, 177, 177);
+}
+
+.header ul{
+  display: flex;
+  padding-right: 315px;
+  list-style-type:none;
+}
+
+.header ul li{
+  margin-left: 50px;
+}
+
+/*Filter.js*/
+.filter {
+    display: grid;
+  grid-template-columns: 1fr 4fr 2fr;
+  height: 120px;
+  padding: 50px 0 50px 0;
+  align-content: center;
+}
+.parts {
+  display: flex;
+  align-items: center;
+  
+}
+.filter ul{
+  padding: 0;
+  margin: 0;
+  display: flex;
+ 
+  list-style-type:none;
+  justify-items: space-around;
+}
+
+.filter ul li p{
+  padding: 0;
+  margin: 0 15px 0 15px
+}
+
+
+.logo{
+  align-items: center;
+}
+.logo img {
+  height: 50px;
+}
+
+
+/*Banner.js*/
+
+.banner img{
+height: 730px;
+}
+
+/*Search.js*/
+.search{
+  padding-top: 7px;
+  margin: 0;
+  align-content: center;
 }
